styles/ant.less
@import "~antd/dist/antd.less";
@import './variables.module.less';

// BODY SETUP

body {
  background: var(--cr-secondary-bg);
}

#__next {
  display: flex;
  flex-direction: column;
}

// ANT OVERRIDES

.ant-card-body {
  padding: 16px;
}

.ant-menu-title-content {
  font-size: 14px;
  line-height: 20px;

  &:hover::after {
    border-bottom: 0 !important;
  }
}

[data-id="logo"] .ant-menu-title-content {
  display: inline-block;
  line-height: 64px;

  span:first-child {
    top: 4px;
  }
}

.ant-tooltip .ant-tooltip-arrow-content, .ant-tooltip .ant-tooltip-inner {
  background-color: black !important;
}

:root[data-theme="theme-light"] {
  --cr-primary-bg: @white;
  --cr-secondary-bg: rgb(250, 250, 250);
  --cr-tertiary-bg: rgb(250, 250, 250);
  --cr-quartery-bg: @white;
  --cr-quintiary-bg: @geekblue-1;
  --cr-primary-text: @black;
  --cr-secondary-text: @black;
  --cr-tertiary-text: @black;
  --cr-mode-bg: transparent;
  --cr-primary-border: @border-color-split;
  --cr-secondary-border: @border-color-base;
  --cr-success-color: @green-6;
  --cr-error-color: @red-6;
  --cr-primary-color: @geekblue-6;
}
:root[data-theme="theme-dark"] {
  --cr-primary-bg: @cr-gray-3;
  --cr-secondary-bg: @cr-gray-2;
  --cr-tertiary-bg: @cr-gray-1;
  --cr-quartery-bg: @cr-gray-4;
  --cr-quintiary-bg: @cr-gray-4;
  --cr-primary-text: @white;
  --cr-secondary-text: @cr-gray-9;
  --cr-tertiary-text: @cr-gray-7;
  --cr-mode-bg: @cr-gold-1;
  --cr-primary-border: @cr-gray-4;
  --cr-secondary-border: @cr-gray-5;
  --cr-success-color: #8FD460;
  --cr-error-color: #E84749;
  --cr-primary-color: #5273E0;

  body::-webkit-scrollbar-track {
    background-color: var(--cr-tertiary-bg);
  }

  body::-webkit-scrollbar-thumb{
    background-color: var(--cr-primary-bg);
  }

  .ant-table-container {
    border-color: var(--cr-primary-border) !important;
  }
}

.ant-breadcrumb-link > a, .ant-breadcrumb-link {
  color: var(--cr-secondary-text) !important;
}

.ant-tag {
  border-color: transparent;
  background-color: var(--cr-tertiary-bg);
  border-radius: 2px;
  color: var(--cr-primary-text);
}

.ant-tag-has-color {
  color: @white;
}

.ant-empty-description {
  color: var(--cr-secondary-text);
}

.ant-table-placeholder > * {
  background-color: var(--cr-secondary-bg) !important;
}

.ant-table, .ant-table-header, .ant-table-container  {
  background-color: var(--cr-secondary-bg);
  border-color: var(--cr-primary-border);
}

.ant-radio-button-wrapper {
  color: var(--cr-primary-text);
  border-color: var(--cr-secondary-border) !important;
  background-color: var(--cr-primary-bg) !important;

  &:hover {
    color: var(--cr-primary-color);
  }

  &:not(.ant-radio-button-wrapper-disabled)::before {
    background-color: transparent;
  }

  &.ant-radio-button-wrapper-checked {
    border-color: var(--cr-primary-color) !important;
    color: var(--cr-primary-color);

    &:hover {
      color: var(--cr-primary-color);
    }

    &:not(.ant-radio-button-wrapper-disabled) {
      &:focus-within {
        box-shadow: none;
      }
      &::before {
        background-color: var(--cr-primary-color);
      }
    }
  }
}

table {
  background-color: var(--cr-secondary-bg);
  border-left: 1px solid var(--cr-primary-border) !important;
  border-top: 1px solid var(--cr-primary-border) !important;
  border-radius: 2px;

  thead tr th {
    font-weight: bold;
    background-color: var(--cr-secondary-bg) !important;
    color: var(--cr-primary-text) !important;
    user-select: none;
    border-right: 1px solid var(--cr-primary-border) !important;
    border-bottom: 0px solid var(--cr-primary-border) !important;
  }

  tbody tr {
    background-color: var(--cr-primary-bg) !important;
  }

  tbody tr td {
    border-right: 1px solid var(--cr-primary-border) !important;
    border-bottom: 1px solid var(--cr-primary-border) !important;
    color: var(--cr-primary-text) !important;
  }
}

